<resources>
    <string name="app_name">Demo DataBaseCRUD</string>
    <string name="data">Enter data to be inserted here:</string>
    <string name="insert">Insert</string>
    <string name="edit">Edit</string>
    <string name="retrieve">Retrieve</string>
    <string name="id">ID:</string>
    <string name="content">Content</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>