<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content" />

    <EditText
        android:id="@+id/etContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />


        <Button
            android:id="@+id/updatebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update" />

        <Button
            android:id="@+id/deletebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete" />




</LinearLayout>